refactor(search): use immutable structure to terms and request database